# VAE_MNIST

./: CMakeLists.txt  main.cpp
include/: vae.hpp
